<resources>
    <string name="app_name">Stagap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>

    <string-array name="ustawienia">
        <item>Wyloguj</item>
    </string-array>
</resources>
