<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <Button
        android:id="@+id/haveAccBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryLight"
        android:text="@string/already_have_account_sign_in"
        android:textAllCaps="false"
        android:textColor="#490097" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="27dp"
        android:id="@+id/relativeLayout">

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordFieldRegRep"
            android:layout_marginTop="38dp"
            android:background="@drawable/button_style_one"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="59dp"
            android:background="@drawable/edittext_style_one"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/surnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameField"
            android:background="@drawable/edittext_style_one"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/passwordFieldRegRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordFieldReg"
            android:background="@drawable/edittext_style_one"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/passwordFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/emailFieldReg"
            android:background="@drawable/edittext_style_one"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/emailFieldReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/surnameField"
            android:background="@drawable/edittext_style_one"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:shadowColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>


</RelativeLayout>

