<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/singUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:text="@string/don_t_have_account_sign_up"
        android:textColor="#490097"
        android:textAllCaps="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/relativeLayout">

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/forgotPassText"
            android:layout_marginTop="27dp"
            android:background="@drawable/button_style_one"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logInImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/defaultprofile" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailField"
            android:layout_alignStart="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:layout_marginTop="22dp"
            android:background="@drawable/edittext_style_one"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/forgotPassText"
            android:layout_alignRight="@+id/forgotPassText"
            android:layout_below="@+id/logInImage"
            android:layout_marginTop="36dp"
            android:background="@drawable/edittext_style_one"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:shadowColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/passwordField"
            android:layout_marginTop="1dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorLight"
            android:textSize="12sp" />

    </RelativeLayout>


</RelativeLayout>
