<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stagap.stagap.LoginFragment">

    <RelativeLayout
        android:id="@+id/valuesRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout"
        android:background="@color/customGrey"
        android:padding="29dp">

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/forgotPassText"
            android:layout_alignRight="@+id/forgotPassText"
            android:layout_below="@+id/forgotPassText"
            android:layout_marginTop="34dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/emailField"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:shadowColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/passwordField"
            android:text="@string/forgot_password"
            android:textColor="@color/colorLight"
            android:textSize="12sp" />

    </RelativeLayout>

</FrameLayout>
